添加新功能（有 Bug）

--- a/resources/translations/zh-CN.json
+++ b/resources/translations/zh-CN.json
@@ -12,7 +12,7 @@
     "modal.language.title": "选择语言 / Select language",
     "modal.language.button.ok.label": "确定 / OK",
     "modal.language.button.cancel.label": "取消 / Cancel",
-    "page.main.panel.ticket_count.label": "购票数量",
+    "page.main.panel.ticket_count.label": "票数",
     "page.main.panel.total_fare.label": "应付总金额",
     "page.main.button.reset.label": "重置",
     "page.main.button.pay.label": "支付",
