添加新功能（有 Bug）

--- a/resources/translations/zh-CN.json
+++ b/resources/translations/zh-CN.json
@@ -1,25 +1,25 @@
 {
-    "station_name.shifu_avenue": "市府大路",
-    "page.main.header.in_service": "正常服务",
-    "button.ok.label": "确定",
-    "button.cancel.label": "取消",
-    "page.language.title": "选择语言",
-    "page.main.button.by_distance.label": "按里程购票",
-    "page.main.button.by_fare.label": "按金额购票",
-    "page.main.button.language.label": "语言 / Language",
-    "page.main.button.top_up.label": "充值",
-    "page.main.button.system_map.label": "线网总图",
-    "modal.language.title": "选择语言 / Select language",
-    "modal.language.button.ok.label": "确定 / OK",
-    "modal.language.button.cancel.label": "取消 / Cancel",
-    "page.main.panel.ticket_count.label": "票数",
-    "page.main.panel.total_fare.label": "应付总金额",
-    "page.main.button.reset.label": "重置",
-    "page.main.button.pay.label": "支付",
-    "page.main.button.line_1.label": "1 号线",
-    "page.main.button.line_2.label": "2 号线",
-    "page.main.button.line_3.label": "3 号线",
-    "page.main.button.line_4.label": "4 号线",
-    "page.main.button.line_9.label": "9 号线",
-    "page.main.button.line_10.label": "10 号线"
+    "station_name.shifu_avenue": "府前大路",
+    "page.main.header.in_service": "通達無礙",
+    "button.ok.label": "準",
+    "button.cancel.label": "罷",
+    "page.language.title": "擇定雅言",
+    "page.main.button.by_distance.label": "計里取券",
+    "page.main.button.by_fare.label": "論直易券",
+    "page.main.button.language.label": "通語 / Language",
+    "page.main.button.top_up.label": "盈儲資錢",
+    "page.main.button.system_map.label": "萬徑全圖",
+    "modal.language.title": "謹擇雅言 / Select language",
+    "modal.language.button.ok.label": "準擬 / OK",
+    "modal.language.button.cancel.label": "姑罷 / Cancel",
+    "page.main.panel.ticket_count.label": "憑券數",
+    "page.main.panel.total_fare.label": "合應納錢",
+    "page.main.button.reset.label": "更始",
+    "page.main.button.pay.label": "納幣",
+    "page.main.button.line_1.label": "壹號徑",
+    "page.main.button.line_2.label": "貳號徑",
+    "page.main.button.line_3.label": "叄號徑",
+    "page.main.button.line_4.label": "肆號徑",
+    "page.main.button.line_9.label": "玖號徑",
+    "page.main.button.line_10.label": "拾號徑"
 }
