添加新功能（有 Bug）

--- a/resources/translations/lzh.json
+++ b/resources/translations/lzh.json
@@ -1,10 +1,25 @@
 {
-    "station_name.shifu_avenue": "市府大道",
-    "button.ok.label": "允",
-    "page.language.title": "擇語",
-    "page.main.button.by_distance.label": "以程購票",
-    "page.main.button.by_fare.label": "以價購票",
-    "page.main.button.language.label": "語 / Language",
-    "page.main.button.top_up.label": "添值",
-    "page.main.button.system_map.label": "線網總圖"
+    "station_name.shifu_avenue": "府前大路",
+    "page.main.header.in_service": "通達無礙",
+    "button.ok.label": "準",
+    "button.cancel.label": "罷",
+    "page.language.title": "擇定雅言",
+    "page.main.button.by_distance.label": "計里取券",
+    "page.main.button.by_fare.label": "論直易券",
+    "page.main.button.language.label": "通語 / Language",
+    "page.main.button.top_up.label": "盈儲資錢",
+    "page.main.button.system_map.label": "萬徑全圖",
+    "modal.language.title": "謹擇雅言 / Select language",
+    "modal.language.button.ok.label": "準擬 / OK",
+    "modal.language.button.cancel.label": "姑罷 / Cancel",
+    "page.main.panel.ticket_count.label": "憑券數",
+    "page.main.panel.total_fare.label": "合應納錢",
+    "page.main.button.reset.label": "更始",
+    "page.main.button.pay.label": "納幣",
+    "page.main.button.line_1.label": "壹號徑",
+    "page.main.button.line_2.label": "貳號徑",
+    "page.main.button.line_3.label": "叄號徑",
+    "page.main.button.line_4.label": "肆號徑",
+    "page.main.button.line_9.label": "玖號徑",
+    "page.main.button.line_10.label": "拾號徑"
 }
